[package]
name = "echofs"
version = "0.6.0"
edition = "2024"
description = "A Rust file server with browser-based directory browsing and media preview"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2"
mime = "0.3"
chrono = "0.4"
percent-encoding = "2"
http-body-util = "0.1"
open = "5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
